🎨  Apply ruff --fix .   🎨  Set strict for zip

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "vaspy"
 version = "0.1.0"
 description = "Add a short description here"
 authors = [{ name = "Ryuichi Arafune", email = "ryuichi.arafune@gmail.com" }]
-dependencies = []
+dependencies = ["numpy"]
 readme = "README.md"
 requires-python = ">= 3.8"
 
