--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,5 +29,19 @@ ignore = [
 ]
 select = ["ALL"]
 
+[tool.coverage.report]
+exclude_also = [
+  "def __repr__",
+  "if self.debug:",
+  "if settings.DEBUG",
+  "raise AssertionError",
+  "raise NotImplementedError",
+  "if 0:",
+  "if __name__ == .__main__.:",
+  "if TYPE_CHECKING:",
+  "class .*\\bProtocol\\):",
+  "@(abc\\.)?abstractmethod",
+]
+
 [tool.ruff.lint.per-file-ignores]
 "test/*" = ["D100", "PLR2004"] # undocumented-public-module
